# sd2

./: .gitignore  .gitmodules  CMakeLists.txt  Doxyfile.in  Test Data.docx  all.cpp  broken-gantt-original.xlsx  button.cpp  config.hpp  config.hpp.in  cvt-export.cpp  cvt-wrapper.cpp  desc.docx  event.cpp  gantt-final.xlsx  gantt-original.xlsx  init.bat  keystate.cpp  log.docx  pseudocode.docx  runtime.cpp  sort.cpp  stars.cpp  user-manual.docx  window.cpp
core/: CMakeLists.txt  delay.cpp  delay.hpp  event.cpp  event.hpp  math_constants.cpp  math_constants.hpp  opts.cpp  opts.hpp  preproc.hpp  priority_list.hpp  runtime.cpp  runtime.hpp  sigslots.hpp  time.cpp  time.hpp
disp/: CMakeLists.txt  line.cpp  line.hpp  window.cpp  window.hpp
examples/: chip8.cpp  evtest.cpp  pong.cpp  sort.cpp  stars.cpp
export/: CMakeLists.txt  dllport.hpp  resource.cpp  resource.hpp
include/: entityx.hpp  fmt.hpp  optional.hpp  priority_list.hpp  randutils.hpp  sigslots.hpp  types.hpp  vector.hpp  win32.hpp
input/: CMakeLists.txt  button.cpp  button.hpp  keystate.cpp  keystate.hpp
phys/: locate.hpp  rect.cpp  rect.hpp  rotation.cpp  rotation.hpp
res/: CMakeLists.txt  dllport.hpp  except.cpp  except.hpp  memblk.cpp  memblk.hpp  memfile.cpp  memfile.hpp  resource.hpp
store/: room.txt
true/: afx.hpp  ai.hpp  config.cpp  grid.hpp  grid_iface.hpp  grid_tile.hpp  main.cpp  menus.hpp  piece.hpp  rooms.hpp  spriteset.hpp  systems.hpp  text.hpp  utils.hpp  valid_moves.hpp
